# predict_stock_price

./: Final_v1.ipynb  Nampq.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: stock_price_VN-checkpoint.ipynb
